clarify Java MT code